[package]
name = "memflow-shards"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shards = { version = "0.1.1", path = "../shards/shards/rust", features = [
  "dllshard",
] } # Adjust path if needed
memflow = { git = "https://github.com/sinkingsugar/memflow.git", branch = "main" }
ctor = "0.4.1"
lazy_static = "1.5.0"
log = "0.4"
